# glacier-music

./: .gitignore  CMakeLists.txt  glacier-music.desktop  glacier-music.pro  main.cpp
qml/: glacier-music.qml
qml/components/: BackgroungItem.qml  ControlsArea.qml  CoverArea.qml  Player.qml  PlaylistItem.qml  ProgressBarIndicator.qml
qml/pages/: ArtistsPage.qml  EditTrackPage.qml  LibraryPage.qml  MainPage.qml  PlayerPage.qml  SettingsPage.qml  TracksPage.qml
rpm/: glacier-music.spec
src/: CMakeLists.txt  artist.cpp  artist.h  audiofile.cpp  audiofile.h  collection.cpp  collection.h  cover.cpp  cover.h  dbadapter.cpp  dbadapter.h  downloader.cpp  glaciermusicplayer.cpp  glaciermusicplayer.h  main.cpp  musicbrainzconnect.cpp  musicbrainzconnect.h  peakscreator.h  rescancollection.cpp  rescancollection.h  track.cpp  track.h
src/lib/: CMakeLists.txt  artist.cpp  artist.h  audiofile.cpp  audiofile.h  coverpluginmanager.cpp  coverpluginmanager.h  coversourceplugin.h  downloader.cpp  downloader.h  glaciermusic_global.h  item.h  musicsourceplugin.h  sourcepluginhost.cpp  sourcepluginhost.h  sourcepluginmanager.cpp  sourcepluginmanager.h  track.cpp  track.h  tracksmodel.cpp  tracksmodel.h
src/models/: artistsqlmodel.cpp  artistsqlmodel.h  playlistmodel.cpp  playlistmodel.h  tracksqlmodel.cpp  tracksqlmodel.h
src/plugin/: CMakeLists.txt  artistsqlmodel.h  blurredimage.cpp  blurredimage.h  peakscreator.cpp  playlistmodel.cpp  playlistmodel.h  plugin.cpp  qmldir  tracksqlmodel.h  wavewidget.cpp  wavewidget.h
src/plugins/: CMakeLists.txt
src/plugins/fromdirectorycover/: CMakeLists.txt  fromdirectorycoverplugin.cpp  fromdirectorycoverplugin.h
src/plugins/fromtagscover/: CMakeLists.txt  fromtagscoverplugin.cpp  fromtagscoverplugin.h
src/plugins/localsource/: CMakeLists.txt  collection.cpp  collection.h  dbadapter.cpp  dbadapter.h  localsourceplugin.cpp  localsourceplugin.h  rescancollection.cpp  rescancollection.h  tracksmodel.h
src/plugins/musicbrainzcover/: CMakeLists.txt  cover.cpp  musicbrainzconnect.cpp  musicbrainzconnect.h  musicbrainzcoverplugin.cpp  musicbrainzcoverplugin.h
src/qml/: glacier-music.qml  glacier-music.qrc
src/qml/components/: ControlsArea.qml  CoverArea.qml  PlaylistItem.qml  ProgressItem.qml  TrackLabelArea.qml
src/qml/pages/: ArtistsPage.qml  EditTrackPage.qml  LibraryPage.qml  PlayListPage.qml  PlayerPage.qml  SettingsPage.qml  SettingsPluginPage.qml  TracksPage.qml
src/qml/plugin/: CMakeLists.txt  blurredimage.cpp  blurredimage.h  glacierimage.cpp  glacierimage.h  peakscreator.cpp  peakscreator.h  plugin.cpp  wavewidget.cpp  wavewidget.h
src/sources/: CMakeLists.txt
src/sources/local/: CMakeLists.txt  collection.cpp  collection.h  dbadapter.cpp  dbadapter.h  localsourceplugin.cpp  localsourceplugin.h  rescancollection.cpp  rescancollection.h  tracksmodel.cpp
src/widgets/: blurredimage.cpp  wavewidget.cpp  wavewidget.h
translations/: glacier-music.ts  glacier-music_cs.ts  glacier-music_de.ts  glacier-music_fi.ts  glacier-music_pl.ts  glacier-music_ru.ts  glacier-music_uk.ts  glacier-music_vi.ts
